# shapely-stubs

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
shapely-stubs/: __init__.pyi  _geometry.pyi  _ragged_array.pyi  _typing.pyi  _version.pyi  affinity.pyi  constructive.pyi  coordinates.pyi  coords.pyi  creation.pyi  decorators.pyi  errors.pyi  io.pyi  lib.pyi  linear.pyi  measurement.pyi  ops.pyi  plotting.pyi  predicates.pyi  prepared.pyi  set_operations.pyi  strtree.pyi  testing.pyi  validation.pyi  wkb.pyi  wkt.pyi
shapely-stubs/algorithms/: cga.pyi  polylabel.pyi
shapely-stubs/geometry/: __init__.pyi  base.pyi  collection.pyi  conftest.pyi  geo.pyi  linestring.pyi  multilinestring.pyi  multipoint.pyi  multipolygon.pyi  point.pyi  polygon.pyi
shapely-stubs/vectorized/: __init__.pyi
